Project

General

Profile

Actions

Bug #13148

closed

[DOC] Small doc fix for Hash#dig and Struct#dig

Bug #13148: [DOC] Small doc fix for Hash#dig and Struct#dig

Added by stomar (Marcus Stollsteimer) over 9 years ago. Updated over 9 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.4.0p0 (2016-12-24 revision 57164) [x86_64-linux]
[ruby-core:79221]

Description

Use the correct parameter name in the method description.


Files

doc_dig.patch (891 Bytes) doc_dig.patch stomar (Marcus Stollsteimer), 01/22/2017 09:23 PM
Actions

Also available in: PDF Atom